--- a/ShibugakiViewer/Properties/Resources.ja-JP.resx
+++ b/ShibugakiViewer/Properties/Resources.ja-JP.resx
@@ -669,9 +669,6 @@
   <data name="FullscreenText_Text" xml:space="preserve">
     <value>フルスクリーンで表示</value>
   </data>
-  <data name="CommonTagsText_Text" xml:space="preserve">
-    <value>共通のタグ</value>
-  </data>
   <data name="ImageSelectedTaxt_Text" xml:space="preserve">
     <value> 個の画像を選択</value>
   </data>
@@ -746,5 +743,11 @@
   </data>
   <data name="LibraryUpdateStatus" xml:space="preserve">
     <value>ライブラリ更新状況</value>
+  </data>
+  <data name="CommonRating" xml:space="preserve">
+    <value>共通の評価</value>
+  </data>
+  <data name="CommonTag" xml:space="preserve">
+    <value>共通のタグ</value>
   </data>
 </root>
