--- a/ShibugakiViewer/Properties/Resources.ja-JP.resx
+++ b/ShibugakiViewer/Properties/Resources.ja-JP.resx
@@ -792,4 +792,7 @@
   <data name="Help" xml:space="preserve">
     <value>ヘルプ</value>
   </data>
+  <data name="LastUsedDate" xml:space="preserve">
+    <value>最終使用日時</value>
+  </data>
 </root>
