--- a/ShibugakiViewer/Properties/Resources.resx
+++ b/ShibugakiViewer/Properties/Resources.resx
@@ -817,7 +817,7 @@
     <value>Display of Search Results</value>
   </data>
   <data name="TopDirectolyOnlyLabel" xml:space="preserve">
-    <value>Ignore Sub-Folders</value>
+    <value>Exclude Subfolders</value>
   </data>
   <data name="ViewerOperation" xml:space="preserve">
     <value>Viewer Operation</value>
@@ -854,5 +854,26 @@
   </data>
   <data name="FullScreen" xml:space="preserve">
     <value>Full-screen</value>
+  </data>
+  <data name="DeleteFileText1" xml:space="preserve">
+    <value>Delete File</value>
+  </data>
+  <data name="DeleteFileText2" xml:space="preserve">
+    <value>Are you sure you want to delete this file?</value>
+  </data>
+  <data name="DeleteFileText3" xml:space="preserve">
+    <value>Delete Multiple Items</value>
+  </data>
+  <data name="DeleteFileText4" xml:space="preserve">
+    <value>Are you sure you want to delete these</value>
+  </data>
+  <data name="DeleteFileText5" xml:space="preserve">
+    <value>items?</value>
+  </data>
+  <data name="DeleteFileText6" xml:space="preserve">
+    <value>Group can not be deleted.</value>
+  </data>
+  <data name="DeleteFileText7" xml:space="preserve">
+    <value>They can not be deleted because they contains group.</value>
   </data>
 </root>
