--- a/ShibugakiViewer/Properties/Resources.ja-JP.resx
+++ b/ShibugakiViewer/Properties/Resources.ja-JP.resx
@@ -876,4 +876,13 @@
   <data name="DeleteFileText7" xml:space="preserve">
     <value>グループを含んでいるため、削除できません。</value>
   </data>
+  <data name="All" xml:space="preserve">
+    <value>全て</value>
+  </data>
+  <data name="ExifData" xml:space="preserve">
+    <value>Exif情報</value>
+  </data>
+  <data name="ExifToDisplay" xml:space="preserve">
+    <value>表示するExif情報</value>
+  </data>
 </root>
